align selects properly and fix print screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 @import "tailwindcss";
 
-.no-print {
-  display: none !important;
+
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
 }
 
 input,
